2007-12-20  ARAKI Yasuhiro  <araki@araki.us>
	
	* doc/PinggerIntroduction.wiki: updated for BackgrounDRb Pinnger.
	* INSTALL: add initial password setting in config/environment.rb
	* config/environment.example.rb: add example of 'config/environment.rb'.

2007-12-19  ARAKI Yasuhiro  <ar@debian.org>

	* test/functional/notes_controller_test.rb (NotesControllerTest::test_index): Fix to use don_get_config.default_theme.
	* test/integration/browse_story_test.rb (BrowseStoryTest::test_fromtop): 
	* test/fixtures/don_envs.yml (first): Change default_theme to 'MT'.

	* doc/HowToPrepare.wiki: add description for librd-ruby.

	* vendor/plugins/backgroundrb: New svn:external entry to use backgroundrb.
	* test/bdrb_test_helper.rb, script/backgroundrb, config/backgroundrb.yml, lib/workers: New file to use BackgounDRb for Pingger.

2007-11-27  ARAKI Yasuhiro  <ar@debian.org>

	* app/models/author.rb (Author::self.authenticate): Change for apply DEPRICATION on rails2.0

2007-11-12  ARAKI Yasuhiro  <ar@debian.org>

	* donrails/tool/update-custom.sh (SCRIPTNAME): Change to use 'install -d'

2007-09-20  ARAKI Yasuhiro  <ar@debian.org>

	* app/helpers/application_helper.rb (ApplicationHelper::don_get_config): Change dafault theme from 'default' to 'MT'.

2007-09-06  ARAKI Yasuhiro  <ar@debian.org>

	* donrails/README.cache.ja: add info of cache test plugin.
	* donrails/INSTALL.ja: remove.
	* donrails/README.3rdparty: remove.

2007-09-05  ARAKI Yasuhiro  <ar@debian.org>

	* INSTALL: New file.

	* README: Small change.

	* app/views/layouts/login.rhtml: Change to use javascript_include_tag :defaults.

2007-09-03  ARAKI Yasuhiro  <ar@debian.org>

	* donrails/tool/hnf2db.rb : Fix to use DonaCa.

2007-09-01  ARAKI Yasuhiro  <ar@debian.org>

	* donrails/tool/update-custom.sh (SCRIPTNAME): Fix for directory structure change at donrails2.
	* donrails/tool/pingger/pingger.rb: likewise.

2007-08-29  ARAKI Yasuhiro  <ar@debian.org>

	* Makefile: Release as donrails 1.7.0.
